<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="16dp">

    <TextView
        android:id="@+id/logintitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:textSize="40sp"
        android:text="@string/login"
        android:textAlignment="center" />

    <LinearLayout
        android:id="@+id/logininfo"
        android:layout_width="382dp"
        android:layout_height="300dp"
        android:layout_below="@+id/logintitle"
        android:layout_marginTop="60dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/usernamefield"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:paddingTop="30dp"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/passwordfield"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:paddingTop="30dp"
            android:textSize="20sp" />

    </LinearLayout>

    <Button
        android:id="@+id/loginbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/logininfo"
        android:layout_alignEnd="@id/logininfo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-81dp"
        android:layout_marginEnd="6dp"
        android:text="@string/btn_login"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/registertext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logininfo"
        android:layout_marginTop="-3dp"
        android:clickable="true"
        android:paddingTop="15dp"
        android:text="@string/register"
        android:textAlignment="center"
        android:textSize="15sp" />

</RelativeLayout>
